Update test running mechanism