@@ -21,18 +21,21 @@ package org.ballerinalang.packerina.task;
 import org.ballerinalang.model.elements.PackageID;
 import org.ballerinalang.packerina.buildcontext.BuildContext;
 import org.ballerinalang.packerina.buildcontext.BuildContextField;
-import org.ballerinalang.testerina.util.TestarinaClassLoader;
-import org.ballerinalang.testerina.util.TesterinaUtils;
-import org.wso2.ballerinalang.compiler.semantics.model.symbols.BPackageSymbol;
+import org.ballerinalang.testerina.core.TesterinaConstants;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
-import org.wso2.ballerinalang.compiler.tree.BLangTestablePackage;
+import org.wso2.ballerinalang.compiler.util.ProjectDirConstants;
 
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
-import java.util.HashSet;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.Map;
+
+import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME;
+import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME_BRE;
+import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME_LIB;
 
 /**
  * Task for executing tests.
@@ -41,9 +44,8 @@ public class RunTestsTask implements Task {
 
     @Override
     public void execute(BuildContext buildContext) {
-        Path sourceRootPath = buildContext.get(BuildContextField.SOURCE_ROOT);
+        Path targetDirPath = buildContext.get(BuildContextField.TARGET_DIR);
 
-        Map<BLangPackage, TestarinaClassLoader> programFileMap = new HashMap<>();
         List<BLangPackage> moduleBirMap = buildContext.getModules();
         // Only tests in packages are executed so default packages i.e. single bal files which has the package name
         // as "." are ignored. This is to be consistent with the "ballerina test" command which only executes tests
@@ -66,51 +68,49 @@ public class RunTestsTask implements Task {
             // }
             Path jarPath = buildContext.getTestJarPathFromTargetCache(packageID);
             Path modulejarPath = buildContext.getJarPathFromTargetCache(packageID);
+            Path jarFileName = modulejarPath.getFileName();
+            String moduleJarName = jarFileName != null ? jarFileName.toString() : "";
             // subsitute test jar if module jar if tests not exists
             if (Files.notExists(jarPath)) {
                 jarPath = modulejarPath;
             }
-
-            HashSet<Path> moduleDependencies = buildContext.moduleDependencyPathMap.get(packageID).platformLibs;
-            // create a new set so that original set is not affected with test dependencies
-            HashSet<Path> dependencyJarPaths = new HashSet<>(moduleDependencies);
-
-            if (bLangPackage.containsTestablePkg()) {
-                for (BLangTestablePackage testablePackage : bLangPackage.getTestablePkgs()) {
-                    // find the set of dependency jar paths for running test for this module and update
-                    updateDependencyJarPaths(testablePackage.symbol.imports, buildContext, dependencyJarPaths);
-                }
-            }
-
-            // Create a class loader to run tests.
-            TestarinaClassLoader classLoader = new TestarinaClassLoader(jarPath, dependencyJarPaths);
-            programFileMap.put(bLangPackage, classLoader);
-        }
-        if (programFileMap.size() > 0) {
-            TesterinaUtils.executeTests(sourceRootPath, programFileMap, buildContext.out(), buildContext.err());
+            readDataFromJsonAndMockTheTestSuit(moduleJarName, targetDirPath, jarPath, buildContext);
         }
     }
 
-    private void updateDependencyJarPaths(List<BPackageSymbol> importPackageSymbols, BuildContext buildContext,
-                                          HashSet<Path> dependencyJarPaths) {
-        for (BPackageSymbol importPackageSymbol : importPackageSymbols) {
-            PackageID importPkgId = importPackageSymbol.pkgID;
-            if (!buildContext.moduleDependencyPathMap.containsKey(importPkgId)) {
-                continue;
-            }
-            // add imported module's dependent jar paths
-            HashSet<Path> testDependencies = buildContext.moduleDependencyPathMap.get(importPkgId).platformLibs;
-            dependencyJarPaths.addAll(testDependencies);
+    private void readDataFromJsonAndMockTheTestSuit(String moduleJarName, Path targetPath, Path testJarPath,
+                                                    BuildContext buildContext) {
+        Path jsonPath = targetPath.resolve(ProjectDirConstants.CACHES_DIR_NAME)
+                .resolve(ProjectDirConstants.JSON_CACHE_DIR_NAME).resolve(moduleJarName);
+        Path balDependencyPath = Paths.get(System.getProperty(BALLERINA_HOME)).resolve(BALLERINA_HOME_BRE)
+                .resolve(BALLERINA_HOME_LIB);
+        String javaCommand = System.getProperty("java.command");
+        String mainClassName = TesterinaConstants.TESTERINA_LAUNCHER_CLASS_NAME;
+        // TODO: remove the Djava.ext.dirs
+        String runningCommand = javaCommand + " -Djava.ext.dirs=" + balDependencyPath.toString() + " -cp "
+                + testJarPath.toString() + " " + mainClassName + " " + jsonPath.toString();
+        try {
+            Process proc = Runtime.getRuntime().exec(runningCommand);
+            proc.waitFor();
 
-            // add imported module's jar path
-            Path testJarPath = buildContext.getTestJarPathFromTargetCache(importPkgId);
-            Path moduleJarPath = buildContext.getJarPathFromTargetCache(importPkgId);
-            if (Files.exists(testJarPath)) {
-                dependencyJarPaths.add(testJarPath);
-            } else if (Files.exists(moduleJarPath)) {
-                dependencyJarPaths.add(moduleJarPath);
+            // Then retrieve the process output
+            InputStream in = proc.getInputStream();
+            InputStream err = proc.getErrorStream();
+            int outputStreamLength;
+
+            byte[] b = new byte[in.available()];
+            outputStreamLength = in.read(b, 0, b.length);
+            if (outputStreamLength > 0) {
+                buildContext.out().println(new String(b, StandardCharsets.UTF_8));
             }
-            updateDependencyJarPaths(importPackageSymbol.imports, buildContext, dependencyJarPaths);
+
+            byte[] c = new byte[err.available()];
+            outputStreamLength = err.read(c, 0, c.length);
+            if (outputStreamLength > 0) {
+                buildContext.out().println(new String(c, StandardCharsets.UTF_8));
+            }
+        } catch (IOException | InterruptedException e) {
+            buildContext.err().println(e);
         }
     }
 }
